--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	
-	<div id ="text">Welcome to the the world of Web development</div>
+	<div data-id ="text">Welcome to the the world of Web development</div>
 
     <script type="text/javascript" src="./script.js">
 </script>
