--- a/main.html
+++ b/main.html
@@ -9,10 +9,12 @@
 <body>
 	<!-- the entire body must be written by student -->
 	
-	<div data-id ="text">Welcome to the the world of Web development</div>
 
     <script type="text/javascript" src="./script.js">
 </script>
+		<div data-id ="text"> Welcome to the the world of Web development
+		</div>
+
 
 </body>
 
