--- a/main.html
+++ b/main.html
@@ -12,8 +12,8 @@
 
     <script type="text/javascript" src="./script.js">
 </script>
-		<div id ="text"> Welcome to the the world of Web development
-		</div>
+		<div id="text"><b> Welcome to the world of Web development</b></div>
+		
 
 
 </body>
